Toon BSDF and viewport/UI oddities #62856

Closed
opened 2019-03-22 19:10:46 +01:00 by Nick · 7 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.21 355.11.10.50.10.103

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-21 23:13, hash: 1ae6aaad43
Worked: (optional)

Short description of error
Toon shader has odd rendering in viewport, and the UI for certain dropdowns in the Material panel can't be clicked on in some cases.

Exact steps for others to reproduce the error

  1. File > New > General
  2. Change Material Surface shader to Toon BSDF
  3. Change Toon BSDF color to anything
  4. Switch to LookDev or Rendered mode
  5. Rotate view and see oddities on cube (clipping, object is stationary but view angle is different). I've seen random green colors, color banding etc.

I experienced this on
The video showing more is below.

blender28.toon_bdsf_oddities.blend

Screen Recording 2019-03-22 at 1.54.04 PM rf16.00.mp4

**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.21 355.11.10.50.10.103 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-21 23:13, hash: `1ae6aaad43` Worked: (optional) **Short description of error** Toon shader has odd rendering in viewport, and the UI for certain dropdowns in the Material panel can't be clicked on in some cases. **Exact steps for others to reproduce the error** 1. File > New > General 2. Change Material Surface shader to Toon BSDF 3. Change Toon BSDF color to anything 4. Switch to LookDev or Rendered mode 5. Rotate view and see oddities on cube (clipping, object is stationary but view angle is different). I've seen random green colors, color banding etc. I experienced this on The video showing more is below. [blender28.toon_bdsf_oddities.blend](https://archive.blender.org/developer/F6866308/blender28.toon_bdsf_oddities.blend) [Screen Recording 2019-03-22 at 1.54.04 PM rf16.00.mp4](https://archive.blender.org/developer/F6866312/Screen_Recording_2019-03-22_at_1.54.04_PM_rf16.00.mp4)
Author

Added subscriber: @NickMade

Added subscriber: @NickMade

Added subscribers: @fclem, @WilliamReynish

Added subscribers: @fclem, @WilliamReynish

I get similar visual glitches when using the Toon BSDF in Eevee:

Screenshot 2019-03-22 at 19.24.39.png

on macOS 10.14.

@fclem: I'm fairly sure this is not supported in Eevee, but I suppose it should fail more gracefully? We should also hide it from the Surface shader menu so users don't try and use it if isn't going to work with Eevee.

I get similar visual glitches when using the Toon BSDF in Eevee: ![Screenshot 2019-03-22 at 19.24.39.png](https://archive.blender.org/developer/F6866374/Screenshot_2019-03-22_at_19.24.39.png) on macOS 10.14. @fclem: I'm fairly sure this is not supported in Eevee, but I suppose it should fail more gracefully? We should also hide it from the Surface shader menu so users don't try and use it if isn't going to work with Eevee.
Clément Foucault was assigned by William Reynish 2019-03-22 19:26:39 +01:00
Author

It also occurs using Cycles (+Supported +CPU/GPU).

It also occurs using Cycles (+Supported +CPU/GPU).

@NickMade That I cannot reproduce, unless you mean LookDev, which is currently (oddly) hard coded to use Eevee, even if you set the renderer to Cycles.

@NickMade That I cannot reproduce, unless you mean LookDev, which is currently (oddly) hard coded to use Eevee, even if you set the renderer to Cycles.

This issue was referenced by e59a2fcc35

This issue was referenced by e59a2fcc35ced809f61150bba2a00a7350eb04da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62856
No description provided.