Fix T62856 Toon BSDF and viewport/UI oddities

This was caused by the material not tagged to use Diffuse lighting data.