source/blender/nodes/shader/nodes/node_shader_bsdf_toon.c
@@ -37,9 +37,9 @@ static bNodeSocketTemplate sh_node_bsdf_toon_out[] = {
 static int node_shader_gpu_bsdf_toon(GPUMaterial *mat, bNode *node, bNodeExecData *UNUSED(execdata), GPUNodeStack *in, GPUNodeStack *out)
 {
 	if (!in[3].link)
-		in[3].link = GPU_builtin(GPU_VIEW_NORMAL);
-	else
-		GPU_link(mat, "direction_transform_m4v3", in[3].link, GPU_builtin(GPU_VIEW_MATRIX), &in[3].link);
+		GPU_link(mat, "world_normals_get", &in[3].link);
+
+	GPU_material_flag_set(mat, GPU_MATFLAG_DIFFUSE);
 
 	return GPU_stack_link(mat, node, "node_bsdf_toon", in, out);
 }
